# Xadrez-Ponto-Com

./: .gitignore  build-web.bat  run-web.bat
Aurora/: aurora.c  aurora_test.c  nnue_eval.c  nnue_eval.h
assets/.WIP/: .color-pallet.ase  .fonts.ase  areas.ase  aurora.ase  board-black.ase  board-white.ase  board.ase  chess-pieces.ase  tile-window.ase  xadrez-icon.ase  xadrez-name.ase  xadrez-normal.ase  xadrez-piece.ase  xadrez-wide.ase
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
frontend/scss/: _board.scss  _board_2.scss  _content.scss  _nine_slice.scss  _variables.scss  index.scss
frontend/src/: app.rs  board.rs  main.rs  pieces.rs  tauri_window_buttons.rs  websocket.rs
frontend/src/custom_tags/: board.rs  header_buttons.rs  mod.rs  nine_slice.rs  tauri_window_buttons.rs
frontend/src/game/: board.rs  game_functions.rs  game_macros.rs  mod.rs  piece.rs  piece_parent.rs  piece_registry.rs  scrapping_functions.rs  websocket.rs
frontend/src/util/: log.rs  mod.rs  notation_to_index_conversions.rs  piece_src.rs  tauri_callbacks.rs  track_mouse.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
