[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
web-sys = { version = "0.3.77", features = ["DomRect", "CssStyleDeclaration", "WebSocket", "MessageEvent"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
chess = "3.2.0"
once_cell = "1.21.3"


[features]
default = []
tauri = []
